--- a/exercise3/stylesheet.css
+++ b/exercise3/stylesheet.css
@@ -133,13 +133,49 @@ body {
     line-height: 27px;
    }
    
-   h2 {
+   h1 {
 
     color: white;
+    padding: 50px;
 
    }
-
-   .gifs {
-        
-  }
    
+    .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+      }
+
+    .reflection {
+
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-style: bold;
+        
+    }
+
+    h1 {
+
+        text-align: center;
+        padding: 50px;
+
+    }
+
+    h2 {
+
+        color: #2549ec;
+        text-align: center;
+
+    }
+
+    h3 {
+
+        color: white;
+        text-align: center;
+        padding: 10px;
+        margin: 30px;
+
+    }
+
+
