--- a/project/stylesheet.css
+++ b/project/stylesheet.css
@@ -7,3 +7,36 @@ body {
     padding: 0;
     font-family: 'Times New Roman', Times, serif;
 }
+
+nav {
+    width: 100%;
+    background: red;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+li {
+    float: left;
+}
+
+a {
+    padding: 20px;
+    width: 100px;
+    display: block;
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+#section1 {
+    height: 700px;
+    background-image: pr.png;
+}
